chore: nightly refinement run 2026-05-12 — bump to v1.16.0.9 (22 guides extended, cycle 6/100)